<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.moviedetail.UpcomingDetailFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="movieDetail"
            type="com.vanskarner.cleanmoviek.ui.MovieDetailModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/upcomingDetailToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/upcoming_detail_appbar"
            app:titleTextColor="@color/white"
            tools:title="@string/app_name" />

        <ScrollView
            android:id="@+id/viewDetailContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcomingDetailToolbar"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backgroundImage"
                    imageDetailUrl="@{movieDetail.backgroundImage}"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/detail_image_height"
                    android:contentDescription="@string/detail_image_tag"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView"
                    android:layout_width="@dimen/detail_cover_page_width"
                    android:layout_height="@dimen/detail_cover_page_height"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
                    app:layout_constraintStart_toStartOf="@+id/backgroundImage">

                    <ImageView
                        android:id="@+id/coverPageImage"
                        imageUrl="@{movieDetail.image}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/item_image_tag"
                        android:scaleType="fitXY"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                </com.google.android.material.card.MaterialCardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/cardView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toTopOf="@+id/cardView">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/transparent_background"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/medium_spacing"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="3"
                            android:text="@{movieDetail.title}"
                            android:textColor="@color/white"
                            android:textSize="@dimen/large_text_size"
                            android:textStyle="bold"
                            tools:text="@tools:sample/lorem/random" />

                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/voteAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium_spacing"
                    app:cardBackgroundColor="@color/transparent_background"
                    app:cardCornerRadius="5dp"
                    app:contentPadding="@dimen/small_spacing"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/small_spacing"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:text="@{Float.toString(movieDetail.voteAverage)}"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:drawableLeftCompat="@drawable/ic_star_border_24"
                        tools:text="9.5" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:drawablePadding="@dimen/small_spacing"
                    android:gravity="center"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:text="@{movieDetail.releaseDate}"
                    app:drawableLeftCompat="@drawable/ic_calendar_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backgroundImage"
                    tools:text="@tools:sample/date/ddmmyy" />

                <TextView
                    android:id="@+id/tvInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_spacing"
                    android:text="@string/information"
                    android:textAllCaps="true"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium_spacing"
                    android:text="@{movieDetail.overview}"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvInformation"
                    tools:text="@tools:sample/lorem/random" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/tvRecommended"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:visibility="@{movieDetail.recommended? View.VISIBLE : View.GONE}"
                    app:cardBackgroundColor="@color/green"
                    app:cardCornerRadius="5dp"
                    app:contentPaddingLeft="@dimen/small_spacing"
                    app:contentPaddingRight="@dimen/small_spacing"
                    app:layout_constraintEnd_toStartOf="@+id/releaseDate"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backgroundImage">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:text="@string/recommended"
                        android:textColor="@color/white"
                        android:textStyle="italic" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tvVoteCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:text="@{Integer.toString(movieDetail.voteCount)}"
                    android:textStyle="italic"
                    app:drawableLeftCompat="@drawable/ic_group_24"
                    app:layout_constraintStart_toEndOf="@+id/tvRecommended"
                    app:layout_constraintTop_toBottomOf="@+id/backgroundImage"
                    tools:text="75" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/upcomingDetailProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>